# mujoco-carpark

./: MUJOCO_LOG.TXT  README.md  car_parking_env_pybullet.py  car_parking_mujoco.py  car_parking_mujoco_ppo.py  keyboard.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt  sb3_ppo.py  sb3_sac.py  test_mujoco.py  train_mujoco_sac_her_sb3.py  train_mujooc_ppo_ours.py
mujoco_xmls/: my_car.xml  my_car_ppo.xml
mujoco_xmls/cars/base_car/: buddy.xml  car1.xml  goose.xml
mujoco_xmls/cars/pusher_car/: buddy.xml
runs/PPO_SB3/: events.out.tfevents.1745605699.archlinux.408778.0
runs/SAC_HER_ours_run1/: events.out.tfevents.1745594539.archlinux.322352.0
runs/SAC_HER_ours_run2/: events.out.tfevents.1745597158.archlinux.343467.0
runs/SAC_SB3/: events.out.tfevents.1745608577.archlinux.430004.0
runs/ppo_CarParkingMujocoPPO-v0_phase1_run1/: events.out.tfevents.1745601624.archlinux.377890.0
runs/ppo_CarParkingMujocoPPO-v0_phase1_run2/: events.out.tfevents.1745605782.archlinux.409631.0
runs/ppo_CarParkingMujocoPPO-v0_phase1_run3/: events.out.tfevents.1745615199.archlinux.479426.0
runs/ppo_CarParkingMujocoPPO-v0_phase2/: events.out.tfevents.1745613320.archlinux.466170.0
