[project]
name = "mujoco-parking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[mujoco,other]>=1.1.1",
    "mujoco>=3.3.1",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
    "tqdm>=4.67.1",
]
